# EdgeSquirrelDetector

./: README.md  pyproject.toml
src/: augment_dataset.py  build_dataset.py  resize_images.py
src/squirrel_detector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
