[project]
name = "squirrel-detector"
version = "0.1.0"
description = "Detect squirrels using computer vision"
authors = [{ name = "Nick Chandler", email = "njchandler2002@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "opencv-python>=4.5",
  "numpy>=1.21",
  "tensorflow>=2.9",
  "matplotlib>=3.4",
  "pyinaturalist>=0.11",
  "requests>=2.26",
  "tqdm>=4.62"
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy", "jupyter", "build"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

